adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi exercitationem, voluptate quidem eius ex consectetur tenetur? Enim veritatis blanditiis quisquam ad impedit. Consectetur sunt explicabo eveniet accusamus perferendis, optio minus!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime voluptates vero nam omnis quam natus, ipsa temporibus quae eligendi repudiandae doloremque. Maxime adipisci aspernatur voluptatum repellendus labore tempore voluptate?</p>
 </body>
 </html>
